<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AlarmDef" Id="{13a551f7-4b2a-4538-a1fb-3adf6eb8c675}">
    <Declaration><![CDATA[TYPE AlarmDef :
STRUCT
	{attribute 'TcEncoding':='UTF-8'}
	Name: STRING;
	{attribute 'TcEncoding':='UTF-8'}
	Description: STRING;
	Active: BOOL;
	AutoReset: BOOL := TRUE;
	Delay: TIME := T#5S;
	EN: BOOL := TRUE;
	Value: LREAL;
	LimitValue: LREAL := 100;
	Polarity: AlarmPolarity := AlarmPolarity.ActiveHigh;
	Status: BOOL;
	Priority: AlarmPriority := AlarmPriority.A;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>