<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="GreenMasterSettingsCTH2" Id="{8d674c3b-432a-4cf2-9ffd-5b24fccd3039}">
    <Declaration><![CDATA[// Settings for GreenMaster
TYPE GreenMasterSettingsCTH2 :
STRUCT
	P2_TEMP_LIM_V: REAL := 12;
	WD_EN: BOOL := FALSE; // Watchdog enable - enables unit on watchdog update failure 
	WD_V: INT := 0; // Watchdog counter to be changed at a minimum every 5 minutes (when enabled)
	SV31_M: BOOL := FALSE; // Handställning  
	SV31_OPM: REAL; // Handställning utsignal  
	POST_RUN_FANS: TIME; // Eftergångstid fläktar
	F_QN1_Override_M: BOOL; // VVX-reglering (0-10 V spjäll)
	F_QN1_OverrideValue_MCMD: REAL; // VVX-reglering (0-10 V spjäll) $(scale "0 1 0 100", unit "%")
	T_GQ1_Override_M: BOOL; // Tilluftsfläkt
	T_GQ1_OverrideValue_MCMD: REAL; // Tilluftsfläkt $(scale "0 1 0 100", unit "%")
	F_GQ1_Override_M: BOOL; // Frånluftsfläkt
	F_GQ1_OverrideValue_MCMD: REAL; // Frånluftsfläkt $(scale "0 1 0 100", unit "%")
	C_QN1_Override_M: BOOL; // Kylkrets ventil
	C_QN1_OverrideValue_MCMD: REAL; // Kylkrets ventil $(scale "0 1 0 100", unit "%")
	H_QN1_Override_M: BOOL; // Värmekrets ventil
	H_QN1_OverrideValue_MCMD: REAL; // Värmekrets ventil $(scale "0 1 0 100", unit "%")
	FirePanelSupplyFanSpeed: REAL := 0.65; // Brandpanel fläkthasighet tilluft $(scale "0 1 0 100", unit "%")
	FirePanelExtractFanSpeed: REAL := 0.9; // Brandpanel fläkthasighet frånluft $(scale "0 1 0 100", unit "%")
	STARTUP_HEATING_TEMP_LIMIT: REAL := 10; // Starta med eftervärming om kallare
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>