<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="GreenMasterStatusCTH2" Id="{15146d7d-4d3c-4772-b282-ed4c8a5d6077}">
    <Declaration><![CDATA[TYPE GreenMasterStatusCTH2 :
STRUCT
	P2_V1: BOOL; // Circulation pump running
	P2_AL: BOOL; // Circulation pump alarm
	HANDSTARTED_TF_AL: BOOL;
	HANDSTOPPED_TF_AL: BOOL;
	HANDSTARTED_FF_AL: BOOL;
	HANDSTOPPED_FF_AL: BOOL;
	BAD_DAMPER_POS_AL: BOOL;
	
	P2_CMD: BOOL; // Circulation pump activated
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>