<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AlarmSignals" Id="{985b7ecc-3608-41b4-9e93-cf3ba1a76abb}">
    <Declaration><![CDATA[TYPE AlarmSignals :
STRUCT
	A: AlarmsA;
	B: AlarmsB;
	C: AlarmsC;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>