<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="SetPointAdjustment" Id="{66e8ab10-f6e2-4cd9-b9cd-17f787b5ca44}">
    <Declaration><![CDATA[TYPE SetPointAdjustment :
STRUCT
	X: REAL;
	Y: REAL;
	Curve: SetPointOffsetCurve;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>